# nyc_taxi_experiment

./: README.md  dbt_project.yml  pyproject.toml
macros/: get_remaining_columns.sql
models/mart/dimension/: dim_payment_type.sql  dim_rate_code.sql  dim_vendor.sql
models/mart/manual/: dim_payment_type.sql  dim_rate_code.sql  dim_rate_code.yml  dim_vendor.sql  dim_vendor.yml  rate_code.yml  vendor.yml
models/mart/metrics/: total_amount_based_on_distance.sql  total_amount_based_on_distance.yml
models/staging/: clean_source.sql  clean_source.yml  extract.sql
